Fix import issues

--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "adventuregame",
   "version": "1.0.0",
+  "type": "module",
   "description": "Simple(?) javascript rpg game",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "multichoice": "node multichoice.js"
   },
   "author": "Diran Solaymon, Keshav Manju, Tianqi Bu",
   "license": "ISC",
   "dependencies": {
     "node-fetch": "^2.6.1"
   }
+
 }
